--- a/ITPLibrary-main/src/itp_library/Reports.form
+++ b/ITPLibrary-main/src/itp_library/Reports.form
@@ -123,7 +123,7 @@
           <Color blue="ad" green="5a" red="12" type="rgb"/>
         </Property>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor de Mano"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
       <Events>
